--- a/kaaszaak.html
+++ b/kaaszaak.html
@@ -10,7 +10,7 @@
 		<header>
 			<img class="logo" src="images/logo.png"/>
 			<div class="titel">
-				<h1>Ed Boele</h1>
+				<h1>Ed Boele 2</h1>
 			</div>
 		</header>
 			<nav>
